--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pydantic==2.4.2    # Version compatible with FastAPI 0.104.1
 
 # Testing
 pytest==7.4.3      # Stable testing framework
+pytest-asyncio==0.21.1  # For async test support
 
 # AI Integration
 openai==1.3.0      # Latest stable version for GPT-4 access
