--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,15 @@ pytest==7.4.3      # Stable testing framework
 pytest-asyncio==0.21.1  # For async test support
 
 # AI Integration
-openai==1.3.0      # Latest stable version for GPT-4 access
+openai==1.13.3      # Latest stable version for GPT-4 access
 
 # Development Tools
 black==23.11.0     # Code formatting
 isort==5.12.0      # Import sorting
-flake8==6.1.0      # Linting 
+flake8==6.1.0      # Linting
+
+# Added from the code block
+flask==2.3.3
+ijson==3.2.2
+
+# Removed pandas and numpy until compatible versions are available for Python 3.13 
